--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>Test GitHub api</title>
+  <title>Template engine</title>
 </head>
 
 <body>
@@ -19,39 +19,37 @@
 
   <!--Main section-->
   <main class="main">
+    <div class="form-group column">
+      <label class="template">Template string
+        <input type="text" value="Hello, {{city}} {{age}}! #{{name}}" class="template-string form-control">
+      </label>
+    </div>
     <div class="inputs">
-      <!--URL-->
-      <div class="form-group column id-col">
-        <label>Object ID
-          <div class="input-group">
-            <div class="input-group-addon id">0</div>
-          </div>
-        </label>
-      </div>
       <!--Fields-->
       <div class="form-group column object-fields">
-        <label class="fields">Fields
-          <input type="button" class="form-control btn" id="add-header" value="Add field">
-          <div class="data">
-            <button class="btn remove" type="button"><span class="glyphicon glyphicon-minus"></span></button>
-            <input type="text" class="form-control key" placeholder="name">
-            <input type="text" class="form-control value" placeholder="Rostik">
-          </div>
-          <div class="data">
-            <button class="btn remove" type="button"><span class="glyphicon glyphicon-minus"></span></button>
-            <input type="text" class="form-control key" placeholder="city">
-            <input type="text" class="form-control value" placeholder="Lviv">
-          </div>
-          <div class="data">
-            <button class="btn remove" type="button"><span class="glyphicon glyphicon-minus"></span></button>
-            <input type="text" class="form-control key" placeholder="age">
-            <input type="text" class="form-control value" placeholder="20">
-          </div>
+        <label>Fields
+          <input type="button" class="form-control btn" id="add-field" value="Add field">
         </label>
+        <div class="fields">
+          <div class="data">
+            <button class="btn remove" type="button"><span class="glyphicon glyphicon-minus"></span></button>
+            <input type="text" class="form-control key" value="name">
+            <input type="text" class="form-control value" value="Rostik">
+          </div>
+          <div class="data">
+            <button class="btn remove" type="button"><span class="glyphicon glyphicon-minus"></span></button>
+            <input type="text" class="form-control key" value="city">
+            <input type="text" class="form-control value" value="Lviv">
+          </div>
+          <div class="data">
+            <button class="btn remove" type="button"><span class="glyphicon glyphicon-minus"></span></button>
+            <input type="text" class="form-control key" value="age">
+            <input type="text" class="form-control value" value="20">
+          </div>
+        </div>
       </div>
     </div>
     <div class="buttons">
-      <input class="btn btn-add" type="button" value="Add object" id="add-object">
       <input class="btn btn-add" type="button" value="Start" id="start">
     </div>
 
@@ -69,7 +67,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
     crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="js/ajax.js"></script>
+  <script src="js/template.js"></script>
   <script src="js/script.js"></script>
 </body>
 
